--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,8 @@ Turpis egestas sed tempus urna et pharetra pharetra massa. Aliquam sem et tortor
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="login_as_admin">Login As Admin</string>
+    <string name="user">User</string>
+    <string name="add_recipe">Add Recipe</string>
+    <string name="adjust_business_info">Adjust Business Info</string>
+    <string name="register_as_admin">Register As Admin</string>
 </resources>
